--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.4.1",
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.4.0",
     "@expo/vector-icons": "^14.1.0",
@@ -25,6 +26,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "expo": "53.0.11",
+    "expo-app-loading": "^2.1.1",
     "expo-auth-session": "~6.2.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -52,11 +54,13 @@
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
