--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/elements": "2.4.3",
     "@react-navigation/native": "7.1.10",
     "@react-navigation/native-stack": "7.3.10",
+    "@sendbird/chat": "^4.19.2",
+    "@sendbird/uikit-react-native": "^3.9.5",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "expo": "53.0.11",
@@ -60,6 +62,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-navigation": "^5.0.0",
+    "sendbird": "^3.1.33",
     "tslib": "^2.6.0"
   },
   "devDependencies": {
