--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/elements": "2.4.3",
     "@react-navigation/native": "7.1.10",
     "@react-navigation/native-stack": "7.3.10",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@sendbird/chat": "^4.19.2",
     "@sendbird/uikit-react-native": "^3.9.5",
     "axios": "^1.9.0",
@@ -35,6 +37,7 @@
     "expo-dev-client": "~5.2.2",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
+    "expo-gl": "~15.1.7",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
@@ -46,6 +49,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.8",
+    "expo-three": "^8.0.0",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -67,6 +71,7 @@
     "react-native-webview": "13.13.5",
     "react-navigation": "^5.0.0",
     "sendbird": "^3.1.33",
+    "three": "^0.166.1",
     "tslib": "^2.6.0"
   },
   "devDependencies": {
